# deepmimic

./: evaluate_policy.py  pyproject.toml  train.py
deepmimic/: env.py
deepmimic/refs/: __init__.py
